# sdk-typescript

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  package-lock.json  package.json  tasks.toml
.githooks/: commit-msg
.github/workflows/: metrics.yaml
.husky/: commit-msg
filament-cli/: Cargo.toml  build.rs
filament-cli/src/: build.rs  main.rs  new.rs  run.rs  storage.rs
filament-cli/templates/pingpong-rust/: Cargo.toml
filament-cli/templates/pingpong-rust/src/: lib.rs
filament-cli/templates/pingpong-ts/: filament.toml  package.json  tsconfig.json
filament-cli/templates/pingpong-ts/src/: index.ts
filament-core/: Cargo.toml
filament-core/src/: bindings.rs  lib.rs  module.rs  pipeline.rs  plugin.rs  runtime.rs  types.rs
filament-core/src/loader/: browser.rs  mod.rs  wasmtime.rs
filament-sdk-js/: index.d.ts  package.json
filament-sdk-rs/: Cargo.toml
filament-sdk-rs/src/: lib.rs
filament-wit/: filament.wit
src/: index.ts
src/agent/: agent.ts
src/models/: bedrock.ts
strands-derive/: Cargo.toml
strands-derive/src/: lib.rs
strands-dev/: tsconfig.json
strands-dev/src/: cli.ts  run.ts
strands-dev/src/commands/: build.ts  check.ts  ci.ts  clean.ts  example.ts  fmt.ts  generate.ts  setup.ts  test.ts  upgrade.ts
strands-dev/src/scripts/: generate_py.py
strands-dev/workflows/: flows.ts
strands-filament/: filament.toml  package.json  pipeline.toml  tsconfig.json
strands-filament/src/: index.ts
strands-grafana/: config.toml  docker-compose.yaml
strands-kt/: build.gradle.kts  settings.gradle.kts
strands-kt/examples-java/: build.gradle.kts
strands-kt/examples-java/src/main/java/: BasicAgent.java
strands-kt/examples-kt/: build.gradle.kts
strands-kt/lib/: build.gradle.kts
strands-kt/lib/src/main/kotlin/com/strands/: Agent.kt  ModelConfig.kt  StreamEvent.kt  Tool.kt  Types.kt
strands-kt/lib/src/test/kotlin/com/strands/: AgentTest.kt
strands-metrics/: Cargo.toml  README.md
strands-metrics/src/: aggregates.rs  downloads.rs  goals.rs  main.rs
strands-native-rs/src/: agent.rs  mcp_client.rs
strands-py/: pyproject.toml
strands-py/strands/: __init__.py  _conversions.py  _result.py  _strands.pyi  hooks.py  tools.py
strands-py/strands/_generated/: strands.py
strands-py/strands/agent/: __init__.py
strands-py/strands/agent/conversation_manager/: __init__.py
strands-py/strands/models/: __init__.py  anthropic.py  bedrock.py
strands-py/strands/session/: file_session_manager.py  s3_session_manager.py
strands-py/strands/types/: __init__.py  content.py  exceptions.py  tools.py
strands-rs/: Cargo.toml  build.rs
strands-rs-native/: Cargo.toml
strands-rs/examples/: anthropic.rs  basic_agent.rs  calculator.rs  chat.rs  multi_turn.rs  session.rs  tools.rs
strands-rs/src/: lib.rs  python.rs  uniffi_bridge.rs
strands-ts/examples/calculator/: package.json
strands-ts/examples/calculator/src/: index.ts
strands-ts/src/models/: streaming.ts
strands-wasm/: build.js  entry.ts  package.json
uniffi-bindgen/: Cargo.toml
wit/: agent.wit
