[workspace]
resolver = "3"
members = [
    # Strands agent SDK
    "strands-derive",
    "strands-rs",
    "strands-rs-native",
    # Filament runtime
    "filament-core",
    "filament-cli",
    "filament-sdk-rs",
    # Tooling
    "strands-metrics",
]

[workspace.package]
authors = ["Filament Working Group <nabochay@amazon.com>"]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/strands-agents/strands-poly"

[workspace.dependencies]
# Workspace crates
filament = { path = "filament-core", default-features = false }
filament-sdk = { path = "filament-sdk-rs", default-features = false }
strands-derive = { path = "strands-derive" }

# Async
async-stream = "0.3"
async-trait = "0.1"
futures-core = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# WASM host
wasmparser = "0.243"
wasmtime = "41"
wasmtime-wasi = "41"
wasmtime-wasi-http = "41"
wasm-encoder = "0.243"
wit-bindgen = "0.52"

# Web
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Response", "Headers", "RequestInit"] }

# FFI
napi = { version = "2.14", features = ["tokio_rt", "async"] }
napi-build = "2.0"
napi-derive = "2.14"
pyo3 = "0.28"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
uniffi = "0.29"

# Proc macros
proc-macro2 = "1"
quote = "1"
syn = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"

# Util
anyhow = "1"
dashmap = "6"
flate2 = "1"
hex = "0.4"
sha2 = "0.10"
tar = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
