[package]
name = "filament-cli"
authors.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "filament"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
cliclack.workspace = true
filament = { workspace = true, default_features = true, features = ["serde"] }
flate2.workspace = true
hex.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
wasm-encoder.workspace = true
wasmparser.workspace = true
wasm-metadata = "0.245.1"

[build-dependencies]
anyhow.workspace = true
flate2.workspace = true
serde_json.workspace = true
tar.workspace = true
toml.workspace = true
