[package]
name = "strands"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
pyo3 = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:tokio", "dep:tracing-subscriber", "pyo3/experimental-inspect"]
stubs = ["dep:clap", "dep:pyo3-introspection"]
uniffi = ["dep:uniffi", "dep:tokio", "dep:thiserror"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
futures-core.workspace = true
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
serde_json.workspace = true
strands-derive.workspace = true
tokio = { workspace = true, optional = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true, features = ["tokio"] }
wasmtime = { workspace = true, features = ["component-model", "async"] }
wasmtime-wasi.workspace = true
clap = { workspace = true, optional = true }
pyo3-introspection = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
wasmtime-wasi-http.workspace = true

[build-dependencies]
anyhow.workspace = true
wasmtime = { workspace = true, features = ["component-model", "async"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream.workspace = true
tracing-subscriber = { workspace = true }

[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[bin]]
name = "strands-stubs"
required-features = ["stubs"]

[lints]
workspace = true
